# rust-based-wt-tui

./: CLAUDE.md  Cargo.toml  README.md  install.sh  rustfmt.toml
src/: cli.rs  config.rs  env.rs  git.rs  main.rs
src/commands/: env_copy.rs  list.rs  merge.rs  mod.rs  new.rs  pr.rs  remove.rs  status.rs  switch.rs
src/tui/: input.rs  mod.rs  ui.rs
tests/: integration_test.rs
tests/common/: mod.rs
