[package]
name = "wt-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
anyhow = "1"
thiserror = "2"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"

[lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
pedantic = { level = "warn", priority = 3 }
